fixed image height overflow

--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ main {
 }
 img {
    max-width: 100%;
-   height: 100%;
+   max-height: 100%;
 }
 .jobs .text {
    display: flex;
